# launchpad-agent

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  wishlist.md
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  event_text.rs  headless.rs  headless_output.rs  main.rs  server_env.rs
crates/client/: Cargo.toml
crates/client/src/: stdio.rs
crates/core/: Cargo.toml  README.md  default_base_instructions.txt  models.json
crates/core/src/: context.rs  error.rs  lib.rs  logging.rs  model_catalog.rs  model_preset.rs  provider_presets.rs  query.rs  session.rs  skills.rs
crates/core/src/compaction/: llm_compactor.rs  mod.rs  prompt.rs  prompt_view.rs  runner.rs  selector.rs  snapshots.rs
crates/core/src/config/: app.rs  logging.rs  mod.rs  provider.rs  safety.rs  tests.rs
crates/core/src/conversation/: mod.rs  records.rs
crates/core/src/provider_presets/: catalog.rs
crates/core/src/query/: compaction.rs  connection_test.rs  mod.rs  prefetch.rs  tests.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  manager.rs  metrics.rs
crates/mcp/src/client/: client.rs  mod.rs  pending.rs  tests.rs
crates/mcp/src/protocol/: errors.rs  jsonrpc.rs  messages.rs  mod.rs  tests.rs
crates/mcp/src/server/: catalog.rs  handle.rs  mod.rs  supervisor.rs  tests.rs
crates/mcp/src/transport/: mod.rs  stdio.rs
crates/mcp/tests/: stdio_echo.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: approval.rs  event.rs  model.rs  session.rs  truncation.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/: error.rs  lib.rs  provider.rs
crates/provider/src/anthropic/: cache.rs  messages.rs  mod.rs
crates/provider/src/google/: generate_content.rs  mod.rs  role.rs
crates/provider/src/openai/: capabilities.rs  chat_completions.rs  responses.rs  shared.rs
crates/provider/src/openai/chat_completions/: stream.rs
crates/safety/: Cargo.toml
crates/safety/src/: legacy_permissions.rs  lib.rs  redaction.rs
crates/server/: Cargo.toml
crates/server/src/: approval.rs  approval_channel.rs  bootstrap.rs  client.rs  connection.rs  event.rs  execution.rs  lib.rs  main.rs  persistence.rs  projection.rs  protocol.rs  provider_config.rs  runtime.rs  session.rs  titles.rs  turn.rs
crates/server/src/runtime/: connection_runtime.rs  execute_turn.rs  handlers_events.rs  handlers_session.rs  handlers_turn.rs  items.rs  session_titles.rs
crates/server/tests/: README.md  end_to_end.rs  persistence_resume.rs  protocol_contract.rs  skills_integration.rs
crates/tasks/: Cargo.toml
crates/tools/: Cargo.toml  README.md
crates/tools/src/: apply_patch.rs  bash.rs  bash.txt  context.rs  file_write.rs  lib.rs  ls.rs  ls.txt  lsp.rs  mcp_adapter.rs  orchestrator.rs  question.rs  read.rs  registry.rs  shell_exec.rs  skill.rs  task.rs  todo.rs  webfetch.rs  websearch.rs
crates/tools/src/apply_patch/: apply.rs  hunk_match.rs  mod.rs  parse.rs  tests.rs  types.rs
crates/tools/src/runtime/: assembly.rs  builtins.rs  registry.rs  shell_command.rs  tests.rs  types.rs
crates/tools/tests/: mcp_bootstrap.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  events.rs  onboarding.rs  runtime.rs  selection.rs  slash.rs  tests.rs  transcript.rs  worker.rs  worker_events.rs
crates/tui/src/render/: geometry.rs  inline_panel.rs  list_items.rs  markdown.rs  mod.rs  theme.rs  transcript.rs
crates/tui/src/runtime/: input_handler.rs  onboarding_flow.rs
crates/tui/src/selection/: mod.rs  model.rs  onboarding.rs  panel_accept.rs  rollout_files.rs  slash_commands.rs
crates/tui/src/tests/: inline.rs  mod.rs  onboarding.rs  slash.rs
crates/tui/src/worker/: event_mapping.rs  history.rs  mod.rs  notifications.rs  provider_validate.rs  tests.rs  tool_render.rs
crates/utils/: Cargo.toml
crates/utils/src/: config_paths.rs  home_dir.rs
docs/: design-overview.md  parity-roadmap.md  spec-app-config.md  spec-context-management.md  spec-conversation.md  spec-language-model.md  spec-mcp.md  spec-overview-architecture.md  spec-safety.md  spec-server-api.md  spec-skills.md  spec-tools.md
tasks/: lessons.md  todo.md
