[package]
name = "lpa-mcp"
description = "MCP client, connection, discovery, and reconnect"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
smol_str = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

reqwest = { workspace = true, optional = true }
reqwest-eventsource = { workspace = true, optional = true }

[features]
default = []
streamable-http = ["dep:reqwest", "dep:reqwest-eventsource"]

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
